fix entry name overflow

--- a/src/main/webapp/sass/components/_entry-list.scss
+++ b/src/main/webapp/sass/components/_entry-list.scss
@@ -49,7 +49,7 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
-	margin-right: 100px;
+	margin-right: 125px;
 }
 
 #feed-accordion .entry-heading .shrink {
